src/snapshots/purring__parser__tests__expr_record_construct.snap
---
source: src/parser.rs
expression: "p_expr(\"foo { a : 1 }\")"
---
13 of 13
===
Module
 Header
  QProperName
   NULL
   ProperName
    7..11
  Decl::Def
   Name
    19..20
   GuardedExpr::Unconditional
    Expr::App
     Expr::Ident
      QName
       NULL
       Name
        23..26
     Expr::Record
      27..28
       RecordLabelExpr::Field
        Label
         29..30
        Expr::Number
         Number
          33..34
      35..36
===
