src/snapshots/purring__parser__tests__expr_record_update.snap
---
source: src/parser.rs
expression: "p_expr(\"foo { a = 1 }\")"
---
6 of 6
===
Expr::Update
 Expr::Ident
  QName
   0..3
   Name
    0..3
  RecordUpdate::Leaf
   Label
    6..7
   Expr::Number
    Number
     10..11
===
