src/snapshots/purring__parser__tests__expr_simple.snap
---
source: src/parser.rs
expression: "p_expr(\"1 + 1\")"
---
10 of 10
===
Module
 Header
  QProperName
   NULL
   ProperName
    7..11
  Decl::Def
   Name
    19..20
   GuardedExpr::Unconditional
    Expr::Op
     Expr::Number
      Number
       23..24
     QOp
      NULL
      Op
       25..26
     Expr::Number
      Number
       27..28
===
