src/snapshots/purring__parser__tests__expr_tick.snap
---
source: src/parser.rs
expression: "p_expr(\"a `b` c\")"
---
5 of 5
===
Expr::Infix
 Expr::Ident
  QName
   NULL
   Name
    0..1
 Expr::Ident
  QName
   NULL
   Name
    3..4
 Expr::Ident
  QName
   NULL
   Name
    6..7
===
