src/snapshots/purring__parser__tests__import_with_newlines.snap
---
source: src/parser.rs
expression: "p_import(\"import A (foo\\n , bar\\n , baz)\")"
---
15 of 15
===
Module
 Header
  QProperName
   NULL
   ProperName
    7..13
   ImportDecl::Multiple
    QProperName
     NULL
     ProperName
      28..29
     Import::Value
      Name
       31..34
     Import::Value
      Name
       38..41
     Import::Value
      Name
       45..48
===
