src/snapshots/purring__parser__tests__minimal_a.snap
---
source: src/parser.rs
expression: "p_module(r\"\nmodule A.C (a) where\n\nt :: T\nt =\n  T.d\n    [ T.d\n        let\n          q a b =\n            a\n              { a: _.o\n              , b: _.id\n              , c\n              , d: 1\n              , e\n              }\n\n          q a b c =\n            A\n              { a:\n                  case b of\n                    true -> Nothing\n                    false -> Just (page + 1)\n              , b: b # c\n              }\n\n          q = a b []\n        in \\_ -> 123\n    ]\n            \")"
---
96 of 96
===
Module
 Header
  QProperName
   Qual
    8..10
   ProperName
    10..11
   Export::Value
    Name
     13..14
  Decl::Sig
   Name
    23..24
   Typ::Constructor
    QProperName
     NULL
     ProperName
      28..29
  Decl::Def
   Name
    30..31
   GuardedExpr::Unconditional
    Expr::App
     Expr::Ident
      QName
       Qual
        36..38
       Name
        38..39
     Expr::Array
      44..45
       Expr::App
        Expr::Ident
         QName
          Qual
           46..48
          Name
           48..49
        Expr::Let
         58..61
          LetBinding::Name
           Name
            72..73
            Binder::Var
             Name
              74..75
            Binder::Var
             Name
              76..77
           GuardedExpr::Unconditional
            Expr::App
             Expr::Ident
              QName
               NULL
               Name
                92..93
             Expr::Record
              108..109
               RecordLabelExpr::Field
                Label
                 110..111
                Expr::App
                 Expr::Access
                  Expr::Section
                   113..114
                   Label
                    115..116
                 Expr::Ident
                  QName
                   NULL
                   Name
                    115..116
               RecordLabelExpr::Field
                Label
                 133..134
                Expr::App
                 Expr::Access
                  Expr::Section
                   136..137
                   Label
                    138..140
                 Expr::Ident
                  QName
                   NULL
                   Name
                    138..140
               RecordLabelExpr::Pun
                Name
                 157..158
               RecordLabelExpr::Field
                Label
                 175..176
                Expr::Number
                 Number
                  178..179
               RecordLabelExpr::Pun
                Name
                 196..197
              225..226
          LetBinding::Name
           Name
            225..226
            Binder::Var
             Name
              227..228
            Binder::Var
             Name
              229..230
            Binder::Var
             Name
              231..232
           GuardedExpr::Unconditional
            Expr::App
             Expr::Constructor
              QProperName
               NULL
               ProperName
                247..248
             Expr::Record
              263..264
               RecordLabelExpr::Field
                Label
                 265..266
                Expr::Case
                 286..290
                  Expr::Ident
                   QName
                    NULL
                    Name
                     291..292
                  CaseBranch
                    Binder::Var
                     Name
                      316..320
                   GuardedExpr::Unconditional
                    Expr::Constructor
                     QProperName
                      NULL
                      ProperName
                       324..331
                  CaseBranch
                    Binder::Var
                     Name
                      352..357
                   GuardedExpr::Unconditional
                    Expr::App
                     Expr::Constructor
                      QProperName
                       NULL
                       ProperName
                        361..365
                     Expr::Paren
                      Expr::Op
                       Expr::Ident
                        QName
                         NULL
                         Name
                          367..371
                       QOp
                        NULL
                        Op
                         372..373
                       Expr::Number
                        Number
                         374..375
               RecordLabelExpr::Field
                Label
                 393..394
                Expr::Op
                 Expr::Ident
                  QName
                   NULL
                   Name
                    396..397
                 QOp
                  NULL
                  Op
                   398..399
                 Expr::Ident
                  QName
                   NULL
                   Name
                    400..401
              429..430
          LetBinding::Pattern
           Binder::Var
            Name
             429..430
           Expr::App
            Expr::App
             Expr::Ident
              QName
               NULL
               Name
                433..434
             Expr::Ident
              QName
               NULL
               Name
                435..436
            Expr::Array
             437..438
             448..450
         Expr::Lambda
          451..452
           Binder::Wildcard
            452..453
          Expr::Number
           Number
            457..460
      466..479
===
