src/snapshots/purring__parser__tests__minimal_b.snap
---
source: src/parser.rs
expression: "p_module(r\"\nmodule A where\n\na :: Test\na =\n  b\n    let\n      b =\n        let\n          f :: forall e. S -> e -> _\n          f m e =\n            { a: M 1\n            , s: Left {}\n            }\n        in\n        do\n          m <- g\n          E.l M.i\n    in [ ]\n            \")"
---
63 of 63
===
Module
 Header
  QProperName
   NULL
   ProperName
    8..9
  Decl::Sig
   Name
    17..18
   Typ::Constructor
    QProperName
     NULL
     ProperName
      22..26
  Decl::Def
   Name
    27..28
   GuardedExpr::Unconditional
    Expr::App
     Expr::Ident
      QName
       NULL
       Name
        33..34
     Expr::Let
      39..42
       LetBinding::Pattern
        Binder::Var
         Name
          49..50
        Expr::Let
         61..64
          LetBinding::Sig
           Name
            75..76
           Typ::Forall
             TypVarBinding
              Name
               87..88
              NULL
            Typ::Arr
             Typ::Constructor
              QProperName
               NULL
               ProperName
                90..91
             Typ::Arr
              Typ::Var
               Name
                95..96
              Typ::Wildcard
               100..101
          LetBinding::Name
           Name
            112..113
            Binder::Var
             Name
              114..115
            Binder::Var
             Name
              116..117
           GuardedExpr::Unconditional
            Expr::Record
             132..133
              RecordLabelExpr::Field
               Label
                134..135
               Expr::App
                Expr::Constructor
                 QProperName
                  NULL
                  ProperName
                   137..138
                Expr::Number
                 Number
                  139..140
              RecordLabelExpr::Field
               Label
                155..156
               Expr::Update
                Expr::Constructor
                 QProperName
                  NULL
                  ProperName
                   158..162
             188..190
         Expr::Do
          NULL
           DoStmt::Stmt
            Binder::Var
             Name
              212..213
            Expr::Ident
             QName
              NULL
              Name
               217..218
           DoStmt::Stmt
            NULL
            Expr::App
             Expr::Ident
              QName
               Qual
                229..231
               Name
                231..232
             Expr::Ident
              QName
               Qual
                233..235
               Name
                235..236
      Expr::Array
       244..245
       0..0
===
