src/snapshots/purring__parser__tests__minimal_c.snap
---
source: src/parser.rs
expression: "p_module(r\"\nmodule AccessRight where\n\nf x =\n  let\n    a b =\n      case b of\n        ABC { a } -> 1\n        _ -> 1\n  in 1\n            \")"
---
31 of 31
===
Module
 Header
  QProperName
   NULL
   ProperName
    8..19
  Decl::Def
   Name
    27..28
    Binder::Var
     Name
      29..30
   GuardedExpr::Unconditional
    Expr::Let
     35..38
      LetBinding::Name
       Name
        43..44
        Binder::Var
         Name
          45..46
       GuardedExpr::Unconditional
        Expr::Case
         55..59
          Expr::Ident
           QName
            NULL
            Name
             60..61
          CaseBranch
            Binder::App
             Binder::Constructor
              QProperName
               NULL
               ProperName
                73..76
             Binder::Record
               RecordLabelBinder::Pun
                Name
                 79..80
           GuardedExpr::Unconditional
            Expr::Number
             Number
              86..87
          CaseBranch
            Binder::Wildcard
             96..97
           GuardedExpr::Unconditional
            Expr::Number
             Number
              101..102
     Expr::Number
      Number
       108..109
===
