src/snapshots/purring__parser__tests__minimal_d.snap
---
source: src/parser.rs
expression: "p_module(r\"\nmodule D where\n\ntype D = X.Z (A (B.C D)) E\n            \")"
---
20 of 20
===
Module
 Header
  QProperName
   NULL
   ProperName
    8..9
  Decl::Type
   ProperName
    22..23
   Typ::App
    Typ::App
     Typ::Constructor
      QProperName
       Qual
        26..28
       ProperName
        28..29
     Typ::App
      Typ::Constructor
       QProperName
        NULL
        ProperName
         31..32
      Typ::App
       Typ::Constructor
        QProperName
         Qual
          34..36
         ProperName
          36..37
       Typ::Constructor
        QProperName
         NULL
         ProperName
          38..39
    Typ::Constructor
     QProperName
      NULL
      ProperName
       42..43
===
